--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -59,6 +59,8 @@ services:
         # Make sure our files and translations folders exists and are writable.
         - mkdir -p "${DOCROOT}/sites/default/files/translations"
         - chgrp -R www-data "${DOCROOT}/sites/default/files"
+        - find "${DOCROOT}/sites/default/files" -type d -exec chmod 2775 {} \;
+        - find "${DOCROOT}/sites/default/files" -type f -exec chmod 0664 {} \;
 
         # Enable Stage File Proxy to sync files.
         - composer require --dev drupal/stage_file_proxy
