--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -47,10 +47,11 @@ services:
         - mkdir -p "${TUGBOAT_ROOT}/files-private" "${TUGBOAT_ROOT}/config"
 
       update:
-        # Install/update packages managed by composer, including drush.
+        # Install/update packages managed by composer, including drush and Stage File Proxy.
         - composer install --optimize-autoloader
+        - composer require --dev drupal/stage_file_proxy
 
-        # Use the tugboat-specific Drupal settings.
+        # Set our tugboat-specific Drupal settings.
         - cp "${TUGBOAT_ROOT}/.tugboat/settings.local.php" "${DOCROOT}/sites/default/settings.local.php"
 
         # Link our custom code.
@@ -61,9 +62,6 @@ services:
         - chgrp -R www-data "${DOCROOT}/sites/default/files"
         - find "${DOCROOT}/sites/default/files" -type d -exec chmod 2775 {} \;
         - find "${DOCROOT}/sites/default/files" -type f -exec chmod 0664 {} \;
-
-        # Enable Stage File Proxy to sync files.
-        - composer require --dev drupal/stage_file_proxy
 
       build:
         - vendor/bin/drush cache:rebuild
