--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -42,10 +42,6 @@ services:
         # to the docroot.
         - ln -snf "${TUGBOAT_ROOT}/web" "${DOCROOT}"
 
-        # Create the Drupal private files and config directories if they aren't
-        # already present.
-        - mkdir -p "${TUGBOAT_ROOT}/files-private" "${TUGBOAT_ROOT}/config"
-
       update:
         # Install/update packages managed by composer, including drush and Stage File Proxy.
         - composer install --optimize-autoloader
@@ -57,8 +53,8 @@ services:
         # Link our custom code.
         - ln -snf "${TUGBOAT_ROOT}/custom/themes" "${DOCROOT}/themes/custom"
 
-        # Make sure our files and translations folders exists and are writable.
-        - mkdir -p "${DOCROOT}/sites/default/files/translations"
+        # Make sure our files directory exists and is writable.
+        - mkdir -p "${DOCROOT}/sites/default/files"
         - chgrp -R www-data "${DOCROOT}/sites/default/files"
         - find "${DOCROOT}/sites/default/files" -type d -exec chmod 2775 {} \;
         - find "${DOCROOT}/sites/default/files" -type f -exec chmod 0664 {} \;
