--- a/.tugboat/example.config.yml
+++ b/.tugboat/example.config.yml
@@ -1,7 +1,7 @@
 # Define the services Drupal needs to run.
 services:
   # Define the database service.
-  mysql:
+  database:
     image: tugboatqa/mariadb:10.5
     commands:
       # Configure the server for the site to run on.
@@ -19,7 +19,7 @@ services:
         # There are generally no build steps at the database level.
 
   # Define the webserver service.
-  php:
+  webserver:
     image: tugboatqa/php:8.1-apache
 
     # Set this as the default service. This does a few things
@@ -29,7 +29,7 @@ services:
     default: true
 
     # Wait until the mysql service is done building.
-    depends: mysql
+    depends: database
 
     commands:
       # Configure the webserver to support Drupal.
@@ -59,5 +59,5 @@ services:
         # Run database updates.
 
         # Enable Stage File Proxy
-      
+
         # Rebuild the cache.
