--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -1,5 +1,5 @@
 services:
-  mysql:
+  database:
     # Use the latest available 5.x version of MySQL
     image: tugboatqa/mariadb:10.5
 
@@ -19,7 +19,7 @@ services:
         - rm /tmp/tugboatdb.sql.gz
 
   # What to call the service hosting the site.
-  php:
+  webserver:
     # This uses PHP 8.1.x with Apache: update to match your version of PHP
     image: tugboatqa/php:8.1-apache
 
@@ -30,7 +30,7 @@ services:
     default: true
 
     # Wait until the mysql service is done building.
-    depends: mysql
+    depends: database
 
     commands:
       init:
