--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -54,7 +54,7 @@ services:
         - ln -snf "${TUGBOAT_ROOT}/custom/themes" "${DOCROOT}/themes/custom"
 
         # Make sure our files directory exists and is writable.
-        - mkdir -p "${DOCROOT}/sites/default/files"
+        - mkdir -p "${DOCROOT}/sites/default/files/translations"
         - chgrp -R www-data "${DOCROOT}/sites/default/files"
         - find "${DOCROOT}/sites/default/files" -type d -exec chmod 2775 {} \;
         - find "${DOCROOT}/sites/default/files" -type f -exec chmod 0664 {} \;
